--- a/public/stylesheets/components/_general.scss
+++ b/public/stylesheets/components/_general.scss
@@ -86,3 +86,10 @@ body {
 .second-backgrond-color {
   background-color: $second-bck-color;
 }
+
+.white-bk {
+  background-color: $bk-white !important;
+}
+.company-theme-bk {
+  background-color: $company-theme-color !important;
+}
