--- a/views/include/slide-show-or.jade
+++ b/views/include/slide-show-or.jade
@@ -1,7 +1,7 @@
 //
    Created by itdwyy on 12/18/2016.
 
-#orslideshow.second-backgrond-color
+#orslideshow
     .wrapper-960
         .slide-show-container-h
             a.slide-item(href='')
