--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -2141,6 +2141,12 @@ body {
 .second-backgrond-color {
   background-color: #f5f5f5; }
 
+.white-bk {
+  background-color: #fff !important; }
+
+.company-theme-bk {
+  background-color: #292059 !important; }
+
 .nav {
   position: fixed;
   display: block;
@@ -2430,7 +2436,6 @@ body {
   position: relative;
   height: 36px;
   width: 100%;
-  background-color: white;
   padding: 0;
   margin: 0;
   white-space: nowrap;
@@ -2442,25 +2447,17 @@ body {
   .tabs:after {
     clear: both; }
   .tabs .tab {
-    position: relative;
-    display: block;
-    float: left;
-    min-height: 1px;
-    *zoom: 1;
+    display: inline-block;
     text-align: center;
     line-height: 36px;
     padding: 0;
     margin: 0;
     list-style-type: none; }
-    .tabs .tab:before, .tabs .tab:after {
-      content: "";
-      display: table; }
-    .tabs .tab:after {
-      clear: both; }
     .tabs .tab a {
       display: block;
       width: 100%;
       height: 100%;
+      margin: 0 0 0 12px;
       padding: 0 24px;
       font-size: 14px;
       font-weight: bold;
@@ -2470,6 +2467,57 @@ body {
       transition: color .28s ease;
       background-color: transparent;
       color: #292059; }
+      .tabs .tab a:first-child {
+        margin: 0; }
+  .tabs.company-theme-bk a {
+    color: #fff; }
+  .tabs .indicator {
+    position: absolute;
+    display: block;
+    bottom: 0;
+    height: 2px;
+    background-color: #292059;
+    will-change: left, right; }
+  .tabs.company-theme-bk .indicator {
+    background-color: #fff; }
+
+.tab-control {
+  display: none;
+  margin-left: auto;
+  left: auto;
+  right: auto;
+  padding: 15px 5px;
+  background-color: #fff; }
+  .tab-control.active {
+    display: block; }
+  .tab-control ul.apiList {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    *zoom: 1; }
+    .tab-control ul.apiList:before, .tab-control ul.apiList:after {
+      content: "";
+      display: table; }
+    .tab-control ul.apiList:after {
+      clear: both; }
+    .tab-control ul.apiList li.list-item {
+      position: relative;
+      display: block;
+      float: left;
+      min-height: 1px;
+      *zoom: 1;
+      width: 33%; }
+      .tab-control ul.apiList li.list-item:before, .tab-control ul.apiList li.list-item:after {
+        content: "";
+        display: table; }
+      .tab-control ul.apiList li.list-item:after {
+        clear: both; }
+  .tab-control .list-item a {
+    line-height: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #292059;
+    text-decoration: none; }
 
 .contact-group {
   position: relative;
@@ -2681,8 +2729,8 @@ table.contact-table {
     display: block; }
 
 .news-area {
-  margin-top: 119px;
-  padding-bottom: 30px; }
+  margin-top: 139px;
+  padding-bottom: 40px; }
 
 .slide-container {
   position: relative;
@@ -2810,6 +2858,17 @@ table.contact-table {
 
 #slick-right {
   background-image: url(../img/btn/ic_keyboard_arrow_right_black_24dp_2x.png); }
+
+#apiContainer {
+  display: block;
+  position: relative;
+  padding: 30px 0;
+  *zoom: 1; }
+  #apiContainer:before, #apiContainer:after {
+    content: "";
+    display: table; }
+  #apiContainer:after {
+    clear: both; }
 
 .tele-content.wrapper-960 {
   margin-top: 97px; }
