--- a/public/stylesheets/components/_tab.scss
+++ b/public/stylesheets/components/_tab.scss
@@ -52,7 +52,8 @@
 }
 
 .tab-control {
-  //position: relative;
+  position: relative;
+  box-sizing: border-box;
   display: none;
   margin-left: auto;
   left:auto;
