--- a/views/search.jade
+++ b/views/search.jade
@@ -4,6 +4,8 @@ html(lang="en")
     include include/header
 body
     include include/nav
+    .bodyfixheader
+        p= message
 script(src='/javascript/includes/jquery-1.12.4.min.js')
-script(src='/javascript/includes/velocity.min.js')
 script(src='/javascript/includes/intranet.js')
+script(src='/javascript/pages/search.js')
