search page add result IE issue waiting be fixed

--- a/public/stylesheets/components/_vals.scss
+++ b/public/stylesheets/components/_vals.scss
@@ -186,3 +186,18 @@ $popbox-title-padding: 15px 5px 5px 25px;
 $popbox-content-padding: 15px 25px 10px 25px;
 $cover-bk-color: color('grey','darken-4');
 $popbox-bk-color: color('grey','lighten-5');
+
+
+//Chip
+$chipGrp-margin: 15px auto;
+
+$chip-bk-color: color('grey','lighten-2');
+$chip-font-size: 13px;
+$chip-font-weight: 600;
+$chip-line-height: 32px;
+$chip-min-width: 32px;
+$chip-border-radius: 16px;
+$chip-height: 32px;
+$chip-margin: 0 5px 5px 0;
+$chip-padding: 0 12px;
+$chip-color: rgba(0,0,0,.6);
