--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -2573,6 +2573,32 @@ table.contact-table {
     table.contact-table tbody tr.person td.td-email {
       width: 39%; }
 
+.chipGrp {
+  margin: 15px auto;
+  padding: 0;
+  list-style: none; }
+  .chipGrp .chipLi {
+    display: inline-block; }
+  .chipGrp .chip {
+    display: inline-block; }
+
+.chip {
+  margin: 0 5px 5px 0;
+  height: 32px;
+  min-width: 32px;
+  padding: 0 12px;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.6);
+  *color: #616161;
+  font-size: 13px;
+  font-weight: 600;
+  line-height: 32px;
+  background-color: #e0e0e0;
+  border-radius: 16px; }
+  .chip.selected {
+    color: #eeeeee;
+    background-color: #292059; }
+
 .default-footer {
   position: fixed;
   width: 100%;
