--- a/public/stylesheets/intranet.scss
+++ b/public/stylesheets/intranet.scss
@@ -14,6 +14,7 @@
 @import "components/menu";
 @import "components/tab";
 @import "components/contacts";
+@import "components/chips";
 @import "components/footer";
 //items
 @import "components/slideimgs";
