--- a/public/stylesheets/intranet.scss
+++ b/public/stylesheets/intranet.scss
@@ -19,8 +19,10 @@
 //items
 @import "components/slideimgs";
 @import "components/popbox";
+@import "components/phone";
 //pages
 @import "pages/index";
 @import "pages/updateNews";
 @import "telephone/telephone";
+
 
