--- a/views/include/newarea.jade
+++ b/views/include/newarea.jade
@@ -1,8 +1,7 @@
 //
    Created by itdwyy on 12/3/2016.
-.wrapper-960.news-area.zindexnormal
+.wrapper-960.news-area
     #slick-container.slide-container
-        #mainNews.img-list
         #slick-left.slide-btn.big.left.center-v.zindexthetop
         #slick-right.slide-btn.big.right.center-v.zindexthetop
     #lastnews.right-new-panel
