--- a/views/include/slide-show-or.jade
+++ b/views/include/slide-show-or.jade
@@ -6,22 +6,22 @@
         .slide-show-container-h
             a.slide-item(href='')
                 .img
-                    img(src='https://lh6.ggpht.com/hsjAgw3hlBCGucchdHNjMHhJzytGHBQmlgMhC0U0Yud7GemVh33-CTKnrQ=w228-h251-c-rw')
+                    img(src= '/news/img/bottom/13Dec2016.png')
                 .title
             a.slide-item(href='')
                 .img
-                    img(src='https://lh5.ggpht.com/PvDo9B5_Fp5UgT9AFT85x68BfKSiBC4hf1hx-88N3W8C2gt5i2TtCCV3UKg=w228-h251-c-rw')
+                    img(src='/news/img/bottom/18OCT2016.png')
                 .title
             a.slide-item(href='')
                 .img
-                    img(src='https://lh5.ggpht.com/QQC75hbFUZ2KSFYD8qDzjhm8HmQBVjdOFHE97bcJnqHW_qeoSB2b_bvLTm0LUA=w228-h251-c-rw')
+                    img(src='/news/img/bottom/21Feb2017.png')
                 .title
             a.slide-item(href='')
                 .img
-                    img(src='https://lh6.ggpht.com/LzAno8k5BJwIIvRXclaYHGQMptv0I-Mpg1_8ffCBAJFH1EJf9EOkDHjTzf-B=w228-h251-c-rw')
+                    img(src='/news/img/bottom/25OCT2016.png')
                 .title
             a.slide-item(href='')
                 .img
-                    img(src='https://lh5.ggpht.com/JTAIVRcvmj0BrU0fR8lk8X9bj8hoErdlyx3k835utbZs87OOJyi2xGvWN1c=w228-h251-c-rw')
+                    img(src='/news/img/bottom/CultureBridge.png')
                 .title
 
