--- a/public/stylesheets/components/slideimgs.scss
+++ b/public/stylesheets/components/slideimgs.scss
@@ -1,30 +1,31 @@
 .slide-container {
   display: block;
   @include float-block;
+  width: $slide-image-width;
+  height: $slide-image-height;
   overflow: hidden;
-  .img-list {
-    position: absolute;
-    display: block;
+  @media screen and (max-width: $phone-width) {
     width: 100%;
-    height: 100%;
-    @include clearfix;
+    min-width: $iphone-6-width;
   }
   .slide-images {
-    position: relative;
+    position: absolute;
     display: block;
-    float: left;
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
     list-style: none;
+    font-size: 0;
     @include clearfix;
-    .img {
-      display: block;
-      height: 100%;
-      background-repeat: no-repeat;
+    z-index: $z-index-the-top;
+    @media screen and (max-width: $phone-width){
+      width: 100%;
+      padding-top: $slide-image-height/$slide-image-width*100%;
+      background-size: cover;
+      -moz-background-size: cover;  /* Firefox 3.6 */
+      background-position: center;  /* Internet Explorer 7/8 */
     }
-
     .title {
       position: absolute;
       display: block;
@@ -56,10 +57,19 @@
   .slide-item {
     position: relative;
     text-decoration: none;
+    box-sizing: border-box;
     @include float-block;
     .img,img {
       width: 100%;
       height: 100%;
+    }
+    @media screen and (max-width: $phone-width){
+      width: 49.9%;
+      margin: 0;
+      padding: 0;
+      .img{
+        padding-top: 55.5%;
+      }
     }
   }
 }
