--- a/views/include/nav.jade
+++ b/views/include/nav.jade
@@ -11,7 +11,7 @@
                 input#telSearch.search(name='val')
                 i.material-icons.search-icon &#xE8B6;
                 #telResult.autoSearchList.nav-searchList.z-depth-2
-    #secondNav.nav-list-h.second-nav.clear.clearfix.z-depth-1.zindexnormal
+    #secondNav.nav-list-h.second-nav.clear.clearfix.z-depth-1.zindexthetop
         ul.wrapper-960.none-padding
             -
                 var departments = ['General Affairs(GAD)','Commercial(COM)','Finance(FIN)','Flight Operations(FLT)'];
