--- a/views/index.jade
+++ b/views/index.jade
@@ -10,4 +10,5 @@ body
 script(src='/javascript/includes/jquery-1.12.4.min.js')
 script(src='/javascript/includes/velocity.min.js')
 script(src='/javascript/includes/intranet.js')
+script(src='/javascript/modules/slideImage.js')
 script(src='/javascript/pages/index.js')
