--- a/views/include/newarea.jade
+++ b/views/include/newarea.jade
@@ -1,9 +1,8 @@
 //
    Created by itdwyy on 12/3/2016.
 .wrapper-960.news-area
-    #slick-container.slide-container
-        #slick-left.slide-btn.big.left.center-v.zindexthetop
-        #slick-right.slide-btn.big.right.center-v.zindexthetop
+    #slick-container.slide-container.zindexnormal
+        #slick-controler.slick-controler
     #lastnews.right-new-panel
         ul#lastnews-tab.tabs
             li.tab
