--- a/public/stylesheets/components/slideimgs.scss
+++ b/public/stylesheets/components/slideimgs.scss
@@ -8,9 +8,12 @@
     width: 100%;
     min-width: $iphone-6-width;
   }
+  .slide-controler {
+    height: 100%;
+  }
   .slide-images {
     position: absolute;
-    display: block;
+    display: none;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -26,6 +29,9 @@
       width: 100%;
       padding-top: $slide-image-height/$slide-image-width*100%;
 
+    }
+    &.cur{
+      display: block;
     }
     .title {
       position: absolute;
