--- a/public/stylesheets/components/_buttons.scss
+++ b/public/stylesheets/components/_buttons.scss
@@ -14,7 +14,7 @@
   }
 
   &.big {
-    margin-top: -(floor($slide-btn-height-big/2));
+
     width: $slide-btn-width-big;
     height: $slide-btn-height-big;
 
@@ -45,10 +45,14 @@
   &.center-v {
     top: 50%;
   }
+  &.center-v.big {
+    margin-top: -(floor($slide-btn-height-big/2));
+  }
 }
 
-.slick-dots {
-  position: relative;
+.slide-dots {
+  position: absolute;
+  top: 5px;
   display: block;
   margin: 0;
   padding: $slick-dots-padding;
@@ -58,16 +62,24 @@
     display: block;
     float: left;
     margin: $dot-margin;
-    width: $dot-btn-width;
-    height: $dot-btn-height;
-    padding: $dot-btn-padding;
     cursor: pointer;
     border-radius: $dot-btn-border-radius;
     background-color: $dot-btn-background-color;
     text-indent: -99999px;
     @include opacity(.9);
-    &.cur {
+    &.cur,&.active {
       background-color: $dot-btn-cur-background-color;
+    }
+    & a{
+      position: relative;
+      display: block;
+      width: $dot-btn-width;
+      height: $dot-btn-height;
+      padding: $dot-btn-padding;
+      border-radius: $dot-btn-border-radius;
+      &.active{
+        background-color: $dot-btn-cur-background-color;
+      }
     }
   }
 }
