--- a/public/stylesheets/components/_tab.scss
+++ b/public/stylesheets/components/_tab.scss
@@ -72,6 +72,9 @@
     li.list-item {
       @include float-block;
       width: 33%;
+      @media screen and (max-width: $phone-width) {
+        width: 100%;
+      }
     }
   }
   .list-item {
