--- a/public/stylesheets/components/slideimgs.scss
+++ b/public/stylesheets/components/slideimgs.scss
@@ -6,6 +6,7 @@
   overflow: hidden;
   @media screen and (max-width: $phone-width) {
     width: 100%;
+    height: auto;
     min-width: $iphone-6-width;
   }
   .slide-controler {
