--- a/public/stylesheets/pages/index.scss
+++ b/public/stylesheets/pages/index.scss
@@ -3,7 +3,7 @@
   margin-top: $news-area-margin-top ;
   padding-bottom: $news-area-padding-bottom;
   @media screen and(max-width: $phone-width){
-    margin-top: $news-area-margin-top -60px;
+    margin-top: $news-area-margin-top - 30px;
   }
 }
 
